# ad

./: .gitignore  PROJECT_HANDOFF.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: scoring.default.json
tests/: test_factor_engine.py  test_field_inference.py  test_fundamentals.py  test_history_import.py  test_public_industries.py  test_quote_observer.py  test_storage_cli.py  test_tdx_blocks.py  test_ths_local.py  test_time_utils.py
ths_stock_picker/: __init__.py  ai_decision.py  cli.py  data_readiness.py  factor_engine.py  field_inference.py  fundamentals.py  history_import.py  models.py  news_import.py  public_industries.py  quote_observer.py  scoring_profile.py  shared_read.py  storage.py  tdx_blocks.py  tdx_local.py  ths_local.py  ths_monitor.py  time_utils.py  web_panel.py
